# smart-shipyard

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  main.py  requirements.txt
backend/: .env.example  README.md  main.py  requirements.txt
backend/tools/: fake_frontend.py  fake_jetson.py
docs/: interface.md  jetson-server-spec.html
edge/docs/: ju_ws_설치가이드_v2.md
edge/ros2_ws/dev_tools/: fake_sensor_publisher.py  fake_slam_publisher.py  start_localization_stack.sh  test_uwb_driver_offline.py
edge/ros2_ws/src/heading_complementary_filter/: package.xml  setup.cfg  setup.py
edge/ros2_ws/src/heading_complementary_filter/heading_complementary_filter/: complementary_filter_node.py  imu_axis_correction_node.py
edge/ros2_ws/src/heading_complementary_filter/test/: test_complementary_filter.py
edge/ros2_ws/src/ship_ugv_localization/: CMakeLists.txt  package.xml
edge/ros2_ws/src/ship_ugv_localization/config/: ekf_global.yaml  ekf_local.yaml
edge/ros2_ws/src/ship_ugv_localization/launch/: localization.launch.py
edge/ros2_ws/src/ship_ugv_perception/: package.xml  setup.cfg  setup.py
edge/ros2_ws/src/ship_ugv_perception/ship_ugv_perception/: change_point.py  custom_tracker.yaml  websocket_client.py  yolo_depth_publisher.py
edge/ros2_ws/src/ship_ugv_perception/weights/: README.txt
edge/ros2_ws/src/slam_map_alignment/: package.xml  setup.cfg  setup.py
edge/ros2_ws/src/slam_map_alignment/slam_map_alignment/: rigid_transform_2d.py  slam_map_alignment_node.py
edge/ros2_ws/src/slam_map_alignment/test/: test_rigid_transform_2d.py
edge/ros2_ws/src/uwb_dwm1001_driver/: package.xml  setup.cfg  setup.py
edge/ros2_ws/src/uwb_dwm1001_driver/uwb_dwm1001_driver/: uwb_ros2_publisher.py
edge/ros2_ws/src/uwb_map_calibration/: package.xml  setup.cfg  setup.py
edge/ros2_ws/src/uwb_map_calibration/uwb_map_calibration/: calibration_node.py
frontend/: .gitkeep  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  ShipyardTwinDashboard.jsx
