<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_map_calibration</name>
  <version>0.1.0</version>
  <description>Computes map to uwb_frame static transform via straight-line drive test; repeatable via Trigger service for daily anchor repositioning</description>
  <maintainer email="you@example.com">jh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
